fixing platform build scripts